--- a/GuessTheNumber/GuessTheNumber.csproj
+++ b/GuessTheNumber/GuessTheNumber.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="coverlet.collector" Version="3.2.0" />
     <PackageReference Include="FluentValidation" Version="11.6.0" />
   </ItemGroup>
 
